Implementando Camada de Apresentação

--- a/src/Index.html
+++ b/src/Index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width-device-width"
-</head>
-<body>
-	<header>Time Tracking Dashboard</header>
-	<main>Em desenvolvimento...</main>   
-</body>
+<html>
+	<head>
+		<link href="css/style.css" rel="stylesheet" />
+		<title>Time Tracking Dashboard</title>
+	</head>
+	<body>
+		<!-- Meu Comentário -->
+		<h2>Time Tracking Dashboard</h2>
+	</body>
 </html>
-	
