--- a/src/Index.html
+++ b/src/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Last Changes 07/01/2023 - 19:15-->
+<!--Last Changes 08/01/2023 - 19:15-->
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,38 +28,41 @@
 
             <button style="background-color:rgb(91, 91, 230); 
                     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    font-size: 18px;
+                    font-size: 20px;
                     width: 100px;
                     text-align: center;
-                    padding:1px;
+                    padding:2px;
                     color:rgb(12, 5, 204);
                     border-radius: 10px;
                     border: none;
+                    margin-top: 10px;
                     background-color: rgb(236, 228, 10);"
                     onclick="show_daily()">Daily</button><br> 
                     
 
             <button style="background-color:rgb(148, 225, 14); 
                     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    font-size: 18px;
+                    font-size: 20px;
                     width: 100px;
                     text-align: center;
-                    padding:1px;
+                    padding:2px;
                     color:rgb(12, 5, 204);
                     border-radius: 10px;
                     border: none;
+                    margin-top: 10px;
                     background-color: rgb(236, 228, 10);"
                     onclick="show_weekly()">Weekly</button><br> 
 
             <button style="background-color:rgb(91, 91, 230); 
                     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    font-size: 18px;
+                    font-size: 20px;
                     width: 100px;
                     text-align: center;
-                    padding:1px;
+                    padding:2px;
                     color:rgb(12, 5, 204);
                     border-radius: 10px;
                     border: none;
+                    margin-top: 10px;
                     background-color: rgb(236, 228, 10);"
                     onclick="show_monthly()">Monthly</button><br> 
       
